<resources>
    <string name="app_name">EventManagerApp</string>
    <string name="c_event">Create Event</string>
    <string name="c_group">Create Group</string>
    <string name="group">Groups</string>
    <string name="my_event">My Event</string>
    <string name="share_event">Event share with me</string>
    <string name="dash_board">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="help">Help and Support</string>
    <string name="profile">My profile</string>
    <string name="user_name">User Name</string>
    <string name="about_user">About </string>

    <string name="title_activity_event_creat">Event_creat</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="event_details">Event Details</string>
    <string name="event_name">Event Name :</string>
    <string name="event_description">Event Description :</string>
    <string name="event_schedule">Event Schedule :</string>
    <string name="event_photo">Event Photo :</string>
    <string name="secrete_code">Secrete Code for Heads :</string>
    <string name="secrete_code_volunteer">Secrete Code for Volunteers : </string>
    <string name="admin_name">Admin Name :</string>
    <string name="admin_designation">Admin Designation :</string>
    <string name="admin_mobilenumber">Admin Mobile Number</string>
    <string name="admin_photo">Admin Photo :</string>
    <string name="admin_email_address">Admin Email Address :</string>
    <string name="event_details_next_btn">Next</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="title_activity_login__page">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_name">Username/Email:</string>
    <string name="login_pass">Password:</string>
    <string name="login">Login:</string>
    <string name="register">Register:</string>
    <!-- Strings related to profile activity -->
    <string name="profile_title">My Profile</string>

    <!-- Strings related to myEvent activity -->
    <string name="myEvent_title">My Event</string>

    <!-- Strings related to EventShRE wITH ME activity -->
    <string name="eventShare_title">Event Share With Me</string>

    <!-- Strings related to Create group activity -->
    <string name="CreateGroup_title">Create Group</string>
    <!-- Strings related to Create event activity -->
    <string name="CreateEvent_title">Create Event</string>
    <!-- Strings related to groups activity -->
    <string name="groups_title">Groups</string>
    <!-- Strings related to settings activity -->
    <string name="settings_title">Settings</string>
    <!-- Strings related to dashboard activity -->
    <string name="Dashboard_title">Dashboard</string>
    <!-- Strings related to help & support activity -->
    <string name="help_title">Help and Support</string>
    <string name="Register_title">Register</string>

    <string-array name="Day">
        <item>Day</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>

    </string-array>

    <string-array name="Month">
        <item>Month</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="Year">
        <item>Year</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
    </string-array>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="forgetPassmess">We just need your registered Email id to sent you password reset instruction</string>

</resources>
