<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    tools:context=".Event_Details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:text="@string/event_details"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"






        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textSize="15dp"
        android:textColor="@color/textColor"
        android:text="@string/event_name"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"





        />

        <EditText
            android:id="@+id/event_name_id"
            android:layout_marginLeft="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="event name"
            android:textColor="@color/textColor"
            android:textSize="15dp"
            android:layout_marginBottom="5dp"



            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/textColor"
            android:textSize="15dp"
            android:text="@string/event_description"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"





            />

        <EditText
            android:id="@+id/event_decription_id"
            android:layout_marginLeft="20dp"
            android:layout_width="250dp"
            android:textColor="@color/textColor"
            android:layout_height="wrap_content"
            android:hint="add description"
            android:textSize="15dp"
            android:layout_marginBottom="5dp"



            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:text="@string/event_schedule"
            android:textColor="@color/textColor"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"





            />


        <EditText
            android:id="@+id/event_schedule_id"
            android:layout_marginLeft="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="add schedule"
            android:textColor="@color/textColor"
            android:textSize="15dp"
            android:layout_marginBottom="5dp"



            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:text="@string/event_photo"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"





            />
        <ImageButton
            android:id="@+id/event_image_btn_id"
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:autofillHints="add_image"
            android:textColor="@color/textColor"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"


            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:text="@string/secrete_code"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor"
            android:textStyle="bold"





            />

        <EditText
            android:id="@+id/secrete_code_for_head_id"
            android:layout_marginLeft="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="add code"
            android:textSize="15dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/textColor"



            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:text="@string/secrete_code_volunteer"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textColor="@color/textColor"

            />

        <EditText
            android:id="@+id/secrete_code_for_volunteer_id"
            android:layout_marginLeft="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="add code"
            android:textSize="15dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/textColor"
            />




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:text="@string/admin_name"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"

            android:textColor="@color/textColor"



            />

        <EditText
            android:id="@+id/admin_name_id"
            android:layout_marginLeft="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="add name"
            android:textSize="15dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/textColor"


            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:text="@string/admin_designation"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"

            android:textColor="@color/textColor"



            />

        <EditText
            android:id="@+id/admin_designation_id"
            android:layout_marginLeft="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="add designation"
            android:textSize="15dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/textColor"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:text="@string/admin_mobilenumber"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            />

        <EditText
            android:id="@+id/admin_mobile_number_id"
            android:layout_marginLeft="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="mobile number"
            android:textSize="15dp"
            android:layout_marginBottom="5dp"

            android:textColor="@color/textColor"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:text="@string/admin_photo"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            />

        <ImageButton
            android:id="@+id/admin_image_btn_id"
            android:layout_width="300dp"
            android:layout_height="180dp"

            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"




            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:text="@string/admin_email_address"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            />

        <EditText
            android:id="@+id/admin_email_address_id"
            android:layout_marginLeft="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="add_email_address"
            android:textSize="15dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/textColor"
            />


        <Button

            android:id="@+id/event_post_btn_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="80dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:text="POST EVENT"
            android:backgroundTint="@color/buttonColor"
            android:textColor="@color/button_text_color"
            android:background="@drawable/button_round"

            />
        
        <Button

            android:id="@+id/event_details_next_btn_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="80dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:backgroundTint="@color/buttonColor"
            android:textColor="@color/button_text_color"
            android:text="@string/event_details_next_btn"
            android:background="@drawable/button_round"




            />
















    </LinearLayout>



</ScrollView>